[package]
name = "somebotty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bobascript = "0.1"
twitch-irc = "3.0"
tokio = { version = "1.8", features = ["full"] }
once_cell = "1.8"
if_chain = "1.0"
