[package]
name = "somebotty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
bincode = "1.3"
bobascript = "0.1"
chrono = "0.4"
config = { version = "0.11", features = ["toml"] }
twitch-irc = { version = "3.0", features = ["refreshing-token"] }
tokio = { version = "1.8", features = ["full"] }
once_cell = "1.8"
if_chain = "1.0"
sled = "0.34.6"
serde = { version = "1.0", features = ["derive"] }
